chore: update coding-standards CI permission

--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
 
+permissions:
+  contents: write
+
 jobs:
   lint:
     uses: laravel/.github/.github/workflows/coding-standards.yml@main
